@@ -13,6 +13,9 @@ CONTRIBUTORS
 Christian Muise <christian.muise@gmail.com>
 	* Various Hypergraph algorithms.
 
+Nathan Davis
+    * Faster node insertion.
+
 Rhys Ulerich <rhys.ulerich@gmail.com>
 	* Dijkstra's Shortest path algorithm.
 
